# outlook-bot

./: .coverage  .env.example  .gitignore  DIAGNOSTIC_ANALYSIS.md  README.md  cold_outreach_prompt.example.txt  cold_outreach_prompt.txt  config.yaml  debug_env.py  debug_outlook_instructions.md  debug_ssl_instructions.md  investorflow_clients.txt  investorflow_competitor_profile.md  outlook_bot.spec  pyproject.toml  requirements.txt  system_prompt.example.txt  system_prompt.txt  upsell_prompt.txt
.github/workflows/: build_app.yml  ci.yml
Products Info/: Funded.md  Sensr Analytics.md  Sensr DataBridge.md  Sensr Portal.md
config/: users.csv
research/: competitor-client-research-investorflow.md  investorflow-clients.csv
scripts/: pre-commit.sh  pre-push.sh  setup-hooks.sh
shorting_intel/: __init__.py  __main__.py  main.py
shorting_intel/analyzers/: counter_intel.py  disruption_scorer.py
shorting_intel/models/: signals.py  targets.py
shorting_intel/monitors/: ai_announcements.py  news_monitor.py
shorting_intel/reports/: generator.py
src/: client_detector.py  cold_outreach.py  config.py  csv_outreach.py  csv_parser.py  date_utils.py  genai.py  gui.py  llm.py  main.py  outlook_client.py  responder.py  scraper.py  signature_stripper.py  ssl_utils.py  upsell_outreach.py  word_doc.py
src/apple_scripts/: activate_outlook.scpt  check_recipients_access.scpt  check_sent_to.scpt  create_draft.scpt  debug_draft_props.scpt  diagnostic_test.scpt  get_emails.scpt  get_flagged_emails.scpt  get_flagged_threads.scpt  get_inbox_senders.scpt  get_latest_draft.scpt  get_recent_threads.scpt  get_sent_details.scpt  get_version.scpt  inspect_account.scpt  list_mailboxes.scpt  reply_to_message.scpt  reply_to_message_v2.scpt  reply_to_message_v3.scpt  reply_to_message_v4.scpt  reply_to_message_v5.scpt  reply_to_message_v6.scpt  test_reply_simple.scpt  test_reply_variants.scpt
src/outlook_bot/: __init__.py  cli.py
src/outlook_bot/core/: __init__.py  config.py  exceptions.py  models.py
src/outlook_bot/email/: __init__.py  client.py  outlook_mac.py  parser.py  threading.py
src/outlook_bot/gui/: __init__.py  app.py
src/outlook_bot/providers/: __init__.py  base.py  gemini.py  openai_provider.py  openrouter.py  registry.py
src/outlook_bot/utils/: __init__.py  dates.py  documents.py  ssl.py  text.py
src/outlook_bot/workflows/: __init__.py  cold_outreach.py  follow_up.py  summarize.py
tests/: conftest.py  inspect_cert_chain.py  outlook_diagnostics.py  test_logic.py  test_scraper.py
tests/apple_scripts/: debug_flags.scpt  debug_flags_manual.scpt  debug_reply_filter.scpt  diagnose_8217.scpt  inspect_flags.scpt  test_delete_recipient.scpt  test_ident_me.scpt  test_reply_all.scpt  test_reply_syntax.scpt
tests/diagnostics/: diagnose_batch_replies.py  diagnose_environment.py  diagnose_ingestion.py  diagnose_llm_health.py  inspect_cert_chain.py  outlook_diagnostics.py  reply_diagnostics.py  ssl_diagnostics.py  test_reply_fixes.py
tests/integration/: test_llm_service.py
tests/unit/: test_cli.py  test_cold_outreach.py  test_config.py  test_date_utils.py  test_dates.py  test_documents.py  test_follow_up.py  test_gui.py  test_llm.py  test_logic.py  test_main.py  test_main_logic.py  test_models.py  test_outlook_client.py  test_parser.py  test_providers.py  test_scraper_parser.py  test_scraper_writer.py  test_ssl.py  test_ssl_utils.py  test_summarize.py  test_text.py
tests/unit/test_shorting_intel/: test_ai_monitor.py  test_counter_intel.py  test_disruption_scorer.py  test_main.py  test_report_generator.py  test_targets.py
