[project]
name = "outlook-bot"
version = "0.1.0"
description = "A local automation tool for macOS that bridges Microsoft Outlook with LLMs like Gemini and OpenAI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.11.12",
    "customtkinter>=5.2.2",
    "google-genai>=1.56.0",
    "openai>=2.14.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
